fix: fix banner control on mobile

--- a/client/scss/components/_banner-control.scss
+++ b/client/scss/components/_banner-control.scss
@@ -10,6 +10,7 @@
     }
 
     ~ main {
+      pointer-events: none;
       transform: scale(0.8) translateY(20vh);
 
       &:after {
